--- a/app/src/main/res/navigation/login_navgrave.xml
+++ b/app/src/main/res/navigation/login_navgrave.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_navgrave"
-    app:startDestination="@id/stertFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/stertFragment"
