--- a/app/src/main/res/navigation/btn_navgrave.xml
+++ b/app/src/main/res/navigation/btn_navgrave.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.essamhshmey.bookforyou.ui.HomeFragment"
+        android:name="com.essamhshmey.bookforyou.ui.btn_navigation_fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
