--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,8 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/btn_navgrev">
-
-    <include app:graph="@navigation/btn_navgrave" />
+    app:startDestination="@id/splashFragment2">
+    <fragment
+        android:id="@+id/stertFragment2"
+        android:name="com.essamhshmey.bookforyou.ui.StertFragment"
+        android:label="fragment_stert"
+        tools:layout="@layout/fragment_stert" >
+        <action
+            android:id="@+id/action_stertFragment2_to_sinUPFragment2"
+            app:destination="@id/sinUPFragment2" />
+        <action
+            android:id="@+id/action_stertFragment2_to_sinINFragment"
+            app:destination="@id/sinINFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/sinINFragment"
+        android:name="com.essamhshmey.bookforyou.ui.login_sinup_fragments.SinINFragment"
+        android:label="fragment_sin_i_n"
+        tools:layout="@layout/fragment_sin_i_n" >
+        <action
+            android:id="@+id/action_sinINFragment_to_sinUPFragment2"
+            app:destination="@id/sinUPFragment2" />
+        <action
+            android:id="@+id/action_sinINFragment_to_containerFragment2"
+            app:destination="@id/containerFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/sinUPFragment2"
+        android:name="com.essamhshmey.bookforyou.ui.login_sinup_fragments.SinUPFragment"
+        android:label="fragment_sin_u_p"
+        tools:layout="@layout/fragment_sin_u_p" >
+        <action
+            android:id="@+id/action_sinUPFragment2_to_sinINFragment"
+            app:destination="@id/sinINFragment" />
+        <action
+            android:id="@+id/action_sinUPFragment2_to_containerFragment2"
+            app:destination="@id/containerFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/splashFragment2"
+        android:name="com.essamhshmey.bookforyou.ui.login_sinup_fragments.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splashFragment2_to_stertFragment2"
+            app:destination="@id/stertFragment2" />
+        <action
+            android:id="@+id/action_splashFragment2_to_containerFragment2"
+            app:destination="@id/containerFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/containerFragment2"
+        android:name="com.essamhshmey.bookforyou.ui.ContainerFragment"
+        android:label="fragment_container"
+        tools:layout="@layout/fragment_container" />
 </navigation>
