--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -18,7 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bakgrond"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:itemIconSize="30dp"
         android:layout_gravity="bottom"
         android:layout_margin="10dp"
+        app:menu="@menu/btn_menu"
         />
 </FrameLayout>
