--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -39,5 +39,18 @@
                     android:textSize="90dp"
                     android:textStyle="bold" />
             </LinearLayout>
+
         </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="stert"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_gravity="bottom"
+        android:layout_marginVertical="80dp"
+        android:layout_marginHorizontal="20dp"
+        />
 </FrameLayout>
