--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,18 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/splashFragment2">
+    app:startDestination="@id/splashFragment">
     <fragment
-        android:id="@+id/stertFragment2"
+        android:id="@+id/stertFragment"
         android:name="com.essamhshmey.bookforyou.ui.StertFragment"
         android:label="fragment_stert"
         tools:layout="@layout/fragment_stert" >
         <action
-            android:id="@+id/action_stertFragment2_to_sinUPFragment2"
-            app:destination="@id/sinUPFragment2" />
+            android:id="@+id/action_stertFragment_to_sinUPFragment"
+            app:destination="@id/sinUPFragment"
+            app:popUpTo="@id/stertFragment"
+            app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_stertFragment2_to_sinINFragment"
-            app:destination="@id/sinINFragment" />
+            android:id="@+id/action_stertFragment_to_sinINFragment"
+            app:destination="@id/sinINFragment"
+            app:popUpTo="@id/stertFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/sinINFragment"
@@ -22,38 +26,50 @@
         android:label="fragment_sin_i_n"
         tools:layout="@layout/fragment_sin_i_n" >
         <action
-            android:id="@+id/action_sinINFragment_to_sinUPFragment2"
-            app:destination="@id/sinUPFragment2" />
+            android:id="@+id/action_sinINFragment_to_sinUPFragment"
+            app:destination="@id/sinUPFragment"
+            app:popUpTo="@id/sinINFragment"
+            app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_sinINFragment_to_containerFragment2"
-            app:destination="@id/containerFragment2" />
+            android:id="@+id/action_sinINFragment_to_containerFragment"
+            app:destination="@id/containerFragment"
+            app:popUpTo="@id/sinINFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/sinUPFragment2"
+        android:id="@+id/sinUPFragment"
         android:name="com.essamhshmey.bookforyou.ui.login_sinup_fragments.SinUPFragment"
         android:label="fragment_sin_u_p"
         tools:layout="@layout/fragment_sin_u_p" >
         <action
-            android:id="@+id/action_sinUPFragment2_to_sinINFragment"
-            app:destination="@id/sinINFragment" />
+            android:id="@+id/action_sinUPFragment_to_sinINFragment"
+            app:destination="@id/sinINFragment"
+            app:popUpTo="@id/sinUPFragment"
+            app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_sinUPFragment2_to_containerFragment2"
-            app:destination="@id/containerFragment2" />
+            android:id="@+id/action_sinUPFragment_to_containerFragment"
+            app:destination="@id/containerFragment"
+            app:popUpTo="@id/sinUPFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/splashFragment2"
+        android:id="@+id/splashFragment"
         android:name="com.essamhshmey.bookforyou.ui.login_sinup_fragments.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_splashFragment2_to_stertFragment2"
-            app:destination="@id/stertFragment2" />
+            android:id="@+id/action_splashFragment_to_stertFragment"
+            app:destination="@id/stertFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_splashFragment2_to_containerFragment2"
-            app:destination="@id/containerFragment2" />
+            android:id="@+id/action_splashFragment_to_containerFragment"
+            app:destination="@id/containerFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/containerFragment2"
+        android:id="@+id/containerFragment"
         android:name="com.essamhshmey.bookforyou.ui.ContainerFragment"
         android:label="fragment_container"
         tools:layout="@layout/fragment_container" />
