--- a/app/src/main/res/menu/btn_menu.xml
+++ b/app/src/main/res/menu/btn_menu.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="Home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/home_24"
-        />
+        android:title="Home" />
     <item
-    android:title="Trend"
-    android:icon="@drawable/trending_up_24"
-    />
+        android:id="@+id/trendFragment"
+        android:icon="@drawable/trending_up_24"
+        android:title="Trend" />
     <item
-        android:title="Subscriptions"
+        android:id="@+id/subscriptionsFragment"
         android:icon="@drawable/subscriptions_24"
-        />
-
-
+        android:title="Subscriptions" />
     <item
-        android:title="Saved"
+        android:id="@+id/savedFragment"
         android:icon="@drawable/bookmarks_24"
-        />
+        android:title="Saved" />
     <item
-        android:title="Account"
+        android:id="@+id/accountFragment"
         android:icon="@drawable/account_box_24"
-        />
+        android:title="Account" />
 </menu>
